# user-color-editor

./: .gitlab-ci.yml  Cargo.toml  README.md  build_flatpak.sh  meson.build  meson_options.txt
.github/workflows/: ci.yml
adw-user-colors-lib/: Cargo.toml
adw-user-colors-lib/src/: colors.rs  config.rs  dark_default.ron  lib.rs  light_default.ron  notify.rs
build-aux/: com.system76.UserColorEditor.Devel.json  com.system76.UserColorEditor.json
data/: com.system76.UserColorEditor.desktop.in.in  com.system76.UserColorEditor.gschema.xml.in  com.system76.UserColorEditor.metainfo.xml.in.in  com.system76.com.desktop.in.in  com.system76.com.gschema.xml.in
data/resources/: resources.gresource.xml
debian/: changelog  control  copyright  rules
i18n/en/: user_color_editor.ftl
po/: POTFILES.in
src/: application.rs  localize.rs  main.rs  meson.build  util.rs  window.rs
src/components/: mod.rs
src/components/color_overrides_editor/: imp.rs  mod.rs
src/components/image_chooser_button/: imp.rs
src/components/theme_chooser_button/: imp.rs  mod.rs
src/components/theme_dropdown/: imp.rs  mod.rs
src/components/theme_import_button/: imp.rs  mod.rs
