[package]
name = "user-color-editor"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
once_cell = "1.9"
relm4-macros = { git = "https://github.com/Relm4/Relm4.git", branch = "next" }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", features=["v4_6"] }
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita"}
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["widgets"]}
palette = { version = "0.6", features = ["serializing"] }
anyhow = "1.0"
cascade = "1.0.0"
float-cmp = "0.9.0"
hex = "0.4.3"
user-colors = { path = "./adw-user-colors-lib", package = "adw-user-colors-lib", default-features = false, features = ["gtk4"] }
serde = "1.0.136"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
xdg = "2.4.1"
# Application i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
itertools = "0.10.3"

[build-dependencies]
glib-build-tools = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[workspace]
members = ["adw-user-colors-lib"]
