[package]
name = "adw-user-colors-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["iced", "gtk4", "notify"]
gtk4 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = { version = "0.6", features = ["serializing"] }
serde = "1.0.136"
ron = "0.8"
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
xdg = "2.4.0"
anyhow = "1.0.57"
notify = { version = "5.0.0", optional = true}
iced = { git = "https://github.com/wash2/iced", optional = true }
futures = "0.3.21"
csscolorparser = "0.6.2"